--- a/public/css/nicepage.css
+++ b/public/css/nicepage.css
@@ -36547,7 +36547,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -32px 0 22px auto;
+  margin: -54px 0 22px auto;
 }
 
 .u-header .u-nav-1 {
@@ -36616,3 +36616,18 @@ a.u-link.u-text-hover-grey-90:hover {
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
  /*end-variables base-font-size*/
+
+
+ .google-maps {
+  position: relative;
+  padding-bottom: 50%; 
+  height: 0;
+  overflow: hidden;
+}
+.google-maps iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
