--- a/public/css/communication-list.css
+++ b/public/css/communication-list.css
@@ -3,148 +3,148 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 539px;
+  min-height: 585px;
 }
 
 .u-section-1 .u-text-1 {
   font-weight: 500;
-  margin: 31px auto 0 0;
+  font-size: 2.25rem;
+  margin: 38px auto 0 0;
 }
 
 .u-section-1 .u-line-1 {
-  width: 315px;
+  width: 313px;
   transform-origin: left center;
-  margin: 7px auto 0 0;
+  margin: 8px auto 0 0;
 }
 
 .u-section-1 .u-image-1 {
-  width: 336px;
-  height: 396px;
-  margin: 31px auto 0 0;
+  width: 499px;
+  height: 329px;
+  margin: 39px auto 0 33px;
 }
 
 .u-section-1 .u-text-2 {
   font-weight: 500;
-  background-image: none;
   font-size: 3.75rem;
-  margin: -284px 105px 183px auto;
+  margin: -177px 160px 60px auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 445px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 32px;
-    font-size: 2.25rem;
+    min-height: 511px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 255px;
-    height: 302px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-text-2 {
+    font-size: 3rem;
     width: auto;
-    margin-top: -238px;
-    margin-right: 0;
-    margin-bottom: 138px;
+    margin-right: 75px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 384px;
+    min-height: 433px;
   }
 
   .u-section-1 .u-text-1 {
-    width: auto;
     font-size: 1.875rem;
-    margin-top: 30px;
+    margin-top: 42px;
   }
 
   .u-section-1 .u-line-1 {
-    width: 255px;
-    margin-top: 9px;
+    width: 264px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 210px;
-    height: 248px;
+    width: 407px;
+    height: 268px;
+    margin-top: 38px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: -186px;
-    margin-right: 69px;
-    margin-bottom: 137px;
     font-size: 2.25rem;
+    margin-top: -140px;
+    margin-right: 30px;
+    margin-bottom: 142px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 460px;
+    min-height: 334px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
+    margin-top: 31px;
   }
 
   .u-section-1 .u-line-1 {
-    width: 178px;
+    width: 243px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 296px;
+    height: 195px;
+    margin-top: 31px;
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 1.5rem;
-    margin-top: -150px;
-    margin-right: 30px;
+    font-size: 1.875rem;
+    margin-top: -114px;
+    margin-right: 22px;
     margin-bottom: 60px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 287px;
+    min-height: 254px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 1.125rem;
+    margin-top: 30px;
   }
 
   .u-section-1 .u-line-1 {
-    width: 158px;
+    width: 182px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 139px;
-    height: 164px;
+    width: 201px;
+    height: 133px;
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 1.125rem;
-    margin-top: -109px;
+    font-size: 1.25rem;
+    margin-top: -68px;
     margin-right: 0;
-    margin-bottom: 99px;
+    margin-bottom: 76px;
   }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 539px;
+  min-height: 532px;
 }
 
 .u-section-2 .u-image-1 {
-  width: 336px;
-  height: 396px;
-  margin: 58px 0 0 auto;
+  width: 325px;
+  height: 384px;
+  margin: 74px 64px 0 auto;
 }
 
 .u-section-2 .u-text-1 {
-  font-weight: 500;
   font-size: 3.75rem;
-  margin: -250px auto 60px 130px;
+  font-weight: 500;
+  margin: -247px auto 60px 34px;
 }
 
 @media (max-width: 1199px) {
@@ -153,146 +153,262 @@
   }
 
   .u-section-2 .u-image-1 {
-    width: 328px;
-    height: 383px;
-    margin-top: 41px;
+    margin-top: 40px;
+    margin-right: 29px;
   }
 
   .u-section-2 .u-text-1 {
+    font-size: 3rem;
     width: auto;
-    margin-top: -258px;
-    margin-bottom: 167px;
+    margin-top: -222px;
+    margin-bottom: 156px;
     margin-left: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 368px;
+    min-height: 319px;
   }
 
   .u-section-2 .u-image-1 {
-    width: 245px;
-    height: 286px;
+    width: 216px;
+    height: 255px;
+    margin-top: 32px;
+    margin-right: 32px;
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: -183px;
-    margin-bottom: 144px;
-    margin-left: 75px;
+    margin-top: -167px;
+    margin-bottom: 120px;
+    margin-left: 23px;
     font-size: 2.25rem;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 233px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 150px;
+    height: 177px;
+    margin-top: 29px;
+    margin-right: 23px;
+  }
+
   .u-section-2 .u-text-1 {
-    font-size: 1.5rem;
-    margin-top: -169px;
-    margin-bottom: 60px;
-    margin-left: 28px;
+    font-size: 1.875rem;
+    margin-top: -108px;
+    margin-bottom: 71px;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 195px;
+    min-height: 172px;
   }
 
   .u-section-2 .u-image-1 {
-    width: 133px;
-    height: 155px;
+    width: 112px;
+    height: 133px;
     margin-top: 20px;
+    margin-right: 0;
   }
 
   .u-section-2 .u-text-1 {
-    font-size: 1.125rem;
-    margin-top: -94px;
-    margin-bottom: 74px;
-    margin-left: 0;
+    font-size: 1.25rem;
+    margin-top: -87px;
+    margin-bottom: 63px;
   }
 } .u-section-3 {
   background-image: none;
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 539px;
+  min-height: 532px;
 }
 
 .u-section-3 .u-image-1 {
-  width: 336px;
-  height: 396px;
-  margin: 88px auto 0 0;
+  width: 325px;
+  height: 384px;
+  margin: 74px auto 0 39px;
 }
 
 .u-section-3 .u-text-1 {
-  font-weight: 500;
   font-size: 3.75rem;
-  margin: -284px 105px 183px auto;
+  font-weight: 500;
+  margin: -258px 120px 60px auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 399px;
+    min-height: 465px;
   }
 
   .u-section-3 .u-image-1 {
-    width: 250px;
-    height: 320px;
-    margin-top: 40px;
+    margin-top: 41px;
+    margin-left: 35px;
   }
 
   .u-section-3 .u-text-1 {
+    font-size: 3rem;
     width: auto;
-    margin-top: -271px;
-    margin-right: 0;
-    margin-bottom: 113px;
+    margin-top: -245px;
+    margin-right: 55px;
+    margin-bottom: 180px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 401px;
+    min-height: 327px;
   }
 
   .u-section-3 .u-image-1 {
-    margin-top: 41px;
+    width: 227px;
+    height: 268px;
+    margin-top: 30px;
+    margin-left: 31px;
   }
 
   .u-section-3 .u-text-1 {
-    margin-top: -219px;
-    margin-right: 40px;
-    margin-bottom: 142px;
+    margin-top: -159px;
+    margin-bottom: 110px;
     font-size: 2.25rem;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 402px;
+    min-height: 237px;
+  }
+
+  .u-section-3 .u-image-1 {
+    width: 150px;
+    height: 177px;
   }
 
   .u-section-3 .u-text-1 {
-    font-size: 1.5rem;
-    margin-top: -200px;
-    margin-right: 0;
-    margin-bottom: 161px;
+    font-size: 1.875rem;
+    margin-top: -122px;
+    margin-right: 30px;
+    margin-bottom: 86px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 219px;
+    min-height: 171px;
   }
 
   .u-section-3 .u-image-1 {
-    width: 139px;
-    height: 178px;
-    margin-top: 21px;
+    width: 116px;
+    height: 137px;
+    margin-top: 17px;
+    margin-left: 0;
   }
 
   .u-section-3 .u-text-1 {
-    font-size: 1.125rem;
-    margin-top: -103px;
-    margin-bottom: 64px;
+    font-size: 1.25rem;
+    margin-top: -90px;
+    margin-right: 17px;
+    margin-bottom: 63px;
+  }
+} .u-section-4 {
+  background-image: none;
+}
+
+.u-section-4 .u-sheet-1 {
+  min-height: 532px;
+}
+
+.u-section-4 .u-image-1 {
+  width: 325px;
+  height: 384px;
+  margin: 74px 64px 0 auto;
+}
+
+.u-section-4 .u-text-1 {
+  font-size: 3.75rem;
+  font-weight: 500;
+  margin: -249px auto 60px 38px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 470px;
+  }
+
+  .u-section-4 .u-image-1 {
+    margin-top: 43px;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 3rem;
+    width: auto;
+    margin-top: -257px;
+    margin-bottom: 142px;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 331px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 211px;
+    height: 249px;
+    margin-top: 41px;
+  }
+
+  .u-section-4 .u-text-1 {
+    margin-top: -184px;
+    margin-bottom: 60px;
+    margin-left: 14px;
+    font-size: 2.25rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 243px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 155px;
+    height: 183px;
+    margin-top: 30px;
+    margin-right: 18px;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 1.875rem;
+    margin-top: -153px;
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 173px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 112px;
+    height: 133px;
+    margin-top: 20px;
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 1.25rem;
+    margin-top: -91px;
+    margin-bottom: 45px;
+    margin-left: 0;
   }
 }
