tambah foto dan style css di index
our team - foto, line dibwh our produk
contact us - line di bawah text contact us
dan menambah gambar satelite(jaga2)

--- a/public/new/css/produk2.css
+++ b/public/new/css/produk2.css
@@ -157,6 +157,7 @@
     opacity: 0.90;
 }
 .container-produk{
+    padding-top: 9px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-auto-rows: 100px 300px;
