update communication list
menambahkan produk baru di communication list

--- a/public/css/communication-list.css
+++ b/public/css/communication-list.css
@@ -132,19 +132,19 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 532px;
+  min-height: 424px;
 }
 
 .u-section-2 .u-image-1 {
   width: 325px;
   height: 384px;
-  margin: 74px 64px 0 auto;
+  margin: 20px 64px 0 auto;
 }
 
 .u-section-2 .u-text-1 {
   font-size: 3.75rem;
   font-weight: 500;
-  margin: -247px auto 60px 34px;
+  margin: -225px auto 179px 166px;
 }
 
 @media (max-width: 1199px) {
@@ -154,15 +154,15 @@
 
   .u-section-2 .u-image-1 {
     margin-top: 40px;
-    margin-right: 29px;
+    margin-right: 37px;
   }
 
   .u-section-2 .u-text-1 {
     font-size: 3rem;
     width: auto;
-    margin-top: -222px;
-    margin-bottom: 156px;
-    margin-left: 0;
+    margin-top: -208px;
+    margin-bottom: 60px;
+    margin-left: 110px;
   }
 }
 
@@ -174,15 +174,13 @@
   .u-section-2 .u-image-1 {
     width: 216px;
     height: 255px;
-    margin-top: 32px;
     margin-right: 32px;
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: -167px;
-    margin-bottom: 120px;
-    margin-left: 23px;
     font-size: 2.25rem;
+    margin-top: -155px;
+    margin-left: 123px;
   }
 }
 
@@ -194,21 +192,19 @@
   .u-section-2 .u-image-1 {
     width: 150px;
     height: 177px;
-    margin-top: 29px;
     margin-right: 23px;
   }
 
   .u-section-2 .u-text-1 {
     font-size: 1.875rem;
-    margin-top: -108px;
-    margin-bottom: 71px;
-    margin-left: 0;
+    margin-top: -117px;
+    margin-left: 85px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 172px;
+    min-height: 173px;
   }
 
   .u-section-2 .u-image-1 {
@@ -220,8 +216,8 @@
 
   .u-section-2 .u-text-1 {
     font-size: 1.25rem;
-    margin-top: -87px;
-    margin-bottom: 63px;
+    margin-top: -77px;
+    margin-left: 45px;
   }
 } .u-section-3 {
   background-image: none;
@@ -334,68 +330,71 @@
 .u-section-4 .u-text-1 {
   font-size: 3.75rem;
   font-weight: 500;
-  margin: -249px auto 60px 38px;
+  margin: -247px auto 60px 34px;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 470px;
+    min-height: 464px;
   }
 
   .u-section-4 .u-image-1 {
-    margin-top: 43px;
+    margin-top: 40px;
+    margin-right: 29px;
   }
 
   .u-section-4 .u-text-1 {
     font-size: 3rem;
     width: auto;
-    margin-top: -257px;
-    margin-bottom: 142px;
+    margin-top: -222px;
+    margin-bottom: 156px;
     margin-left: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 331px;
+    min-height: 319px;
   }
 
   .u-section-4 .u-image-1 {
-    width: 211px;
-    height: 249px;
-    margin-top: 41px;
+    width: 216px;
+    height: 255px;
+    margin-top: 32px;
+    margin-right: 32px;
   }
 
   .u-section-4 .u-text-1 {
-    margin-top: -184px;
-    margin-bottom: 60px;
-    margin-left: 14px;
+    margin-top: -167px;
+    margin-bottom: 120px;
+    margin-left: 23px;
     font-size: 2.25rem;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 243px;
+    min-height: 233px;
   }
 
   .u-section-4 .u-image-1 {
-    width: 155px;
-    height: 183px;
-    margin-top: 30px;
-    margin-right: 18px;
+    width: 150px;
+    height: 177px;
+    margin-top: 29px;
+    margin-right: 23px;
   }
 
   .u-section-4 .u-text-1 {
     font-size: 1.875rem;
-    margin-top: -153px;
-    margin-left: 10px;
+    margin-top: -108px;
+    margin-bottom: 71px;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 173px;
+    min-height: 172px;
   }
 
   .u-section-4 .u-image-1 {
@@ -407,8 +406,99 @@
 
   .u-section-4 .u-text-1 {
     font-size: 1.25rem;
-    margin-top: -91px;
-    margin-bottom: 45px;
+    margin-top: -87px;
+    margin-bottom: 63px;
+  }
+} .u-section-5 {
+  background-image: none;
+}
+
+.u-section-5 .u-sheet-1 {
+  min-height: 532px;
+}
+
+.u-section-5 .u-image-1 {
+  width: 325px;
+  height: 384px;
+  margin: 74px auto 0 94px;
+}
+
+.u-section-5 .u-text-1 {
+  font-size: 3.75rem;
+  font-weight: 500;
+  margin: -291px 0 60px auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 470px;
+  }
+
+  .u-section-5 .u-image-1 {
+    margin-top: 43px;
+    margin-left: 32px;
+  }
+
+  .u-section-5 .u-text-1 {
+    font-size: 3rem;
+    width: auto;
+    margin-top: -271px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 331px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 211px;
+    height: 249px;
+    margin-top: 41px;
+    margin-left: 51px;
+  }
+
+  .u-section-5 .u-text-1 {
+    font-size: 2.25rem;
+    margin-top: -184px;
+    margin-right: 14px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 243px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 155px;
+    height: 183px;
+    margin-top: 21px;
+    margin-left: 23px;
+  }
+
+  .u-section-5 .u-text-1 {
+    font-size: 1.875rem;
+    margin-top: -141px;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 173px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 112px;
+    height: 133px;
+    margin-top: 20px;
     margin-left: 0;
+  }
+
+  .u-section-5 .u-text-1 {
+    font-size: 1.25rem;
+    margin-top: -99px;
+    margin-bottom: 54px;
   }
 }
